Clean-up unused server-side routes and middleware
Removed route:
- PUT /documents/:documentUuid/lock

Removed middleware:
- hasLock
